policy/network-policy-egress-policy-demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: parter-to-backend
  namespace: policy-demo
spec:
  podSelector: 
    matchLabels:
      tier: partner
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: default 
    - podSelector:
        matchLabels:
          tier: backend
